tests/fixtures/wyst/wync/tests/fixtures/syntax-corpus/negative/reserved-postfix-question.wyst
module syntax_bad_reserved

const VALUE = flag?
